[bug 163801826] fix jumping footer

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -79,3 +79,6 @@ a:hover {
 .react-paginate ul {
   margin-top: 30px !important;
 }
+.activeo{
+  color: rebeccapurple;
+}
